added padding and margins

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
    
     <!-- animate css -->
@@ -81,10 +82,11 @@
                 <div class="full-width">
                     <div class="container">
                         <div class="row">
+                            <h2>A little bit about me...</h2>
                             <div class="col-md-6">
-
+                               
                                 <div class="half-width">
-                                    <h2>A little bit about me...</h2>
+                                   
                                     <p>
                                         I am a Responsive Designer & Developer who simply loves creating beautiful websites and great user experiences. I studied fullstack web development at UPenn's coding bootcamp, 
                                         but I focus on front-end coding, and website creation. With an undergraduate degree in English, I have communicative strength that shows in client interaction and in the sites I make. 
@@ -131,7 +133,7 @@
                 </div>
                 </section> 
                 <!--End work section-->
-                <section id="portfolio" class="portfolio_wrapper">
+                <section id="portfolio-b" class="portfolio_wrapper">
                     <div class="container">
 
                         <h2 id="portTitle">My Work</h2>
@@ -247,23 +249,23 @@
                         <img src="assets/images/Danielle.jpg" id="contact-img" alt="my contact image">
                     </div>
                     <div class="col" id="contact-info">
-                        <h2>Interested in knowing more?</h2>
-                        <h3 id="email-header">Let's start a conversation</h3>
+                        <h2 style="font-weight: bold">Interested in knowing more?</h2>
+                        <p id="email-header">Let's start a conversation</p >
                         <a href="mailto:dlamorte@dlamorte.org">
                             <img src="assets/icons/Envelope.png" id="envelope" alt="envelope icon" />
                             <h5>dlamorte@dlamorte.org</h5>
                         </a>
-                        <h3 id="socialmedia-header">Or, come find me on the interwebs.</h3>
+                        <h3 id="socialmedia-header">Connect with me online</h3>
                         <ul>
                             <li>
                                 <a href="assets/icons/twitter" target="_blank">
-                                    <img src="assets/iconsTwitter.png" alt="twitter icon">
+                                    <img src="assets/icons/Twitter.png" alt="twitter icon">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="assets/icons/LinkedIn" target="_blank">
-                                    <img src="assets/iconsLinkedIn.png" alt="LinkedIn icon">
+                                    <img src="assets/icons/LinkedIn.png" alt="LinkedIn icon">
                                 </a>
                             </li>
                             <li>
