more style changes

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
                             <div class="col-md-6">
                                 <div class="half-width">
                                     <p>   
-                                        Strong abilities in coding, editing and copywriting, mean I have everything that is needed to communicate effectively online through websites. 
-                                        Outside of work, I hang out with my dogs, practice yoga and chase the green flash in Naples, Florida. 
+                                        Strong abilities in coding, editing and copywriting, mean I have everything that is needed to communicate effectively online through websites. WordPress, React, Javascript, are my favorite tools and areas of focus.
+                                        
                                     </p>
+                                    <p>Outside of work, I hang out with my dogs, practice yoga and chase the green flash in Naples, Florida. </p>
                                 </div>
                             </div>
                         </div>
@@ -243,7 +244,7 @@
                 </section><!-- end section portfolio -->
                 <!-- portfolioEnd -->
            
-            <footer id="contact">
+            <footer id="contact" class="container">
                 <div class="row">
                     <div class="col">
                         <img src="assets/images/Danielle.jpg" id="contact-img" alt="my contact image">
@@ -269,7 +270,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/" target="_blank">
+                                <a href="https://github.com/Lorica7" target="_blank">
                                     <img src="assets/icons/GitHub.png" alt="Github icon">
                                 </a>
                             </li>
