--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                         </div>
                     </div>
             </section>
-            <section id="work">
-                <div class="container">
+            <section >
+                <div class="container" id="work">
                     <div class="row">
                         <div class="col-lg-4">
                      <img src="assets/images/html.svg" alt="html5 icon" class="code-icon">
