--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-   <link rel="stylesheet" href="css/normalize.css">
     <!-- animate css -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- animated-headlines.css css -->
@@ -25,7 +24,7 @@
     
 </head>
 
-    <body class ="img-fluid container">
+    <body class ="container">
         <header>
             <div class="row" >
                 <nav class="navbar fixed-top" >
